--- a/display2.html
+++ b/display2.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css 레이아웃</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>css 레이아웃용 태그</h1>
     <p>div와 span이라는 태그에 대해서 알아봅시다.</p>
     <h2>실습</h2>
-    <div>div는 divide, division의 뜻을 가진 태그 (구획구분)</div>
-    <span>span은 div와 같은 나누는 뜻 (일부강조)</span>
+    <div class="bg-gold box">div는 divide, division의 뜻을 가진 태그 (구획구분)</div>
+    <span class="bg-lime box display-inlineblock">span은 div와 같은 나누는 뜻 (일부강조)</span>
 </body>
 </html>
